homepage banner alignment fixed

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,6 +3,8 @@
     align-items: center;
     justify-content: space-between;
     height: 7.5rem;
+    max-width: 1440px;
+    margin: 0 auto;
 
     .logo{
         height: 3.125rem;
